--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
+    "react-color": "^2.19.3",
     "react-dom": "^16.12.0",
+    "react-owl-carousel": "^2.3.2",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.0",
