--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.0",
+    "react-slick": "^0.27.14",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
